Sun Nov 27 00:16:07 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (copy_stream_body): use 0666 for permission argument for open.
	  [ruby-core:40865]

Sat Nov 26 23:01:38 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_engine.rb: remove side effect of generic engine
	  load by explicitly loading software-based "openssl" engine for
	  all tests.

Sat Nov 26 20:41:48 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP.get_response): enable use_ssl
	  if given URI object is https.
	  patched by Mark Ferlatte [ruby-core:40665] [Bug #5545]

	* lib/net/http.rb (Net::HTTP.post_form): ditto.

Sat Nov 26 20:01:18 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP::SSL_ATTRIBUTES): refix 33701.
	  store instance variable symbol names.

Sat Nov 26 15:40:25 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* .travis.yml (script): should be ./configure

Sat Nov 26 15:39:18 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* .travis.yml (before_script): wrong name, sorry.

Sat Nov 26 15:31:34 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* .travis.yml (before-script): autoconf required.

Sat Nov 26 15:24:05 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* .travis.yml: Travis enable.

Sat Nov 26 10:47:50 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/extconf.rb: remove checks for available functions.
	* ext/openssl/missing.h: ditto.
	  Thanks, Tim Mooney for reporting this!
	  [Bug #5432] [ruby-core:40088]

Sat Nov 26 10:22:28 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_ssl.c: add comment on where to find implementation
	  of OpenSSL::SSL::SSLSocket#session.

Sat Nov 26 05:00:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--no-undefined): RUBY_TRY_CFLAGS does nothing for
	  linker flags.  use RUBY_TRY_LDFLAGS.

Fri Nov 25 11:37:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
